--- a/libuthread/Makefile
+++ b/libuthread/Makefile
@@ -1,33 +1,52 @@
 # Target library
+lib := libuthread.a README.html
+objs := context.o preempt.o queue.o sem.o uthread.o
 
-lib := libuthread.a
+CC	:= gcc
+CFLAGS := -Wall -Wextra -Werror -MMD
+CFLAGS += -g
+PANDOC := pandoc
 
-all: $(lib) mythreads README.html
+all: $(lib) 
 
 ## TODO: Phase 1
 
-#ar rcs my_library.a file1.o file2.o
-#how to use this command???
+# Conditional variables for different 
+# behaviors
+ifneq ($(V), 1)
+Q = @
+endif
 
-mythreads: context.o preempt.o queue.o sem.o uthread.o
-	gcc -Wall -Wextra -Werror -o mythreads context.o preempt.o queue.o sem.o uthread.o
+#Dependency Tracking
+deps := $(patsubst %.o,%.d,$(objs))
+-include $(deps)
 
-context.o: context.c private.h uthread.h
-	gcc -Wall -Wextra -Werror -c -o context.o context.c 
+libuthread.a: ar rcs libuthread.a $(objs)
+	@echo "CC $@"
+	$(Q)$(CC) $(CFLAGS) -o $@ $^
 
-preempt.o: preempt.c priv.h uthread.h
-	gcc -Wall -Wextra -Werror -c -o preempt.o preempt.c
+%.o: %.c private.h uthread.h
+	@echo "CC $@"
+	$(Q)$(CC) $(CFLAGS) -c -o $@ $<
 
-queue.o: queue.c queue.h
-	gcc -Wall -Wextra -Werror -c -o queue.o queue.c
+%.o: %.c priv.h uthread.h
+	@echo "CC $@"
+	$(Q)$(CC) $(CFLAGS) -c -o$@ $<
 
-sem.o: sem.c queue.h sem.h
-	gcc -Wall -Wextra -Werror -c -o sem.o sem.c
+%.o: %.c queue.h
+	@echo "CC $@"
+	$(Q)$(CC) $(CFLAGS) -c -o$@ $<
 
-uthread.o: uthread.c priv.h uthread.h queue.h
-	gcc -Wall -Wextra -Werror -c -o uthread.o uthread.c
+%.o: %.c queue.h sem.h
+	@echo "CC $@"
+	$(Q)$(CC) $(CFLAGS) -c -o$@ $<
 
-README.html: README.md
-	pandoc -o README.html README.md
+%.o: %.c priv.h uthread.h queue.h
+	@echo "CC $@"
+	$(Q)$(CC) $(CFLAGS) -c -o$@ $<
 
-clean: rm -f mythreads READ.html context.o preempt.o queue.o sem.o uthread.o
+%.html: %.md
+	$(Q)$(PANDOC) -o $@ $<
+
+clean: 
+	$(Q)rm -f $(targets) $(objs) $(deps)
