--- a/apps/Makefile
+++ b/apps/Makefile
@@ -3,7 +3,12 @@ programs := \
 	queue_tester_example.x \
 	queue_tester.x \
 	uthread_hello.x \
-	uthread_yield.x
+	uthread_yield.x \
+	sem_simple.x \
+	sem_buffer.x \
+	sem_count.x \
+	sem_prime.x
+
 
 # User-level thread library
 UTHREADLIB := libuthread
